--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,44 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stat
+    image: stat
+    container_name: stat
     ports:
       - "9090:9090"
+    depends_on:
+          -   stats-db
+    environment:
+          - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/stats
 
   stats-db:
     image: postgres:14-alpine
+    container_name: pg-stats-db
+    ports:
+        - "6541:5432"
+    environment:
+        POSTGRES_USER: root
+        POSTGRES_PASSWORD: root
+        POSTGRES_DB: stats
 
   ewm-service:
+    build: ./main
+    image: main
+    container_name: main
+    depends_on:
+      - stats-server
+      - ewm-db
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/explore
     ports:
       - "8080:8080"
 
   ewm-db:
     image: postgres:14-alpine
+    container_name: pg-ewm-db
+    ports:
+      - "6541:5433"
+    environment:
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: explore
