--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
           - stats-db
     environment:
-          - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/stats
+          - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
 
   stats-db:
     image: postgres:14-alpine
@@ -29,8 +29,8 @@ services:
       - stats-server
       - ewm-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5433/explore
-      - STAT-SERVER.URL=http://localhost:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5433/explore
+      - STAT_SERVER_URL=http://stats-server:9090
     ports:
       - "8080:8080"
 
