--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     ports:
       - "9090:9090"
     depends_on:
-          - stats-db
+        - stats-db
     environment:
-          - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/stats
+        - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db/stats
 
   stats-db:
     image: postgres:14-alpine
-    container_name: pg-stats-db
+    container_name: stats-db
     ports:
         - "6541:5432"
     environment:
@@ -29,16 +29,16 @@ services:
       - stats-server
       - ewm-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5433/explore
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db/explore
       - STAT_SERVER_URL=http://stats-server:9090
     ports:
       - "8080:8080"
 
   ewm-db:
     image: postgres:14-alpine
-    container_name: pg-ewm-db
+    container_name: ewm-db
     ports:
-      - "6542:5433"
+      - "6542:5432"
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
