--- a/main/src/main/resources/application.properties
+++ b/main/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8080
 
-stat-server.url=http://stats-server:9090
+stat-server.url=http://localhost:9090
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
@@ -9,7 +9,7 @@ spring.sql.init.mode=always
 
 #---
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/explore
+spring.datasource.url=jdbc:postgresql://localhost:5432/explore
 spring.datasource.username=root
 spring.datasource.password=root
 #---
